feat: add @clerk/themes dependency and integrate user authentication in payment handling; enhance ClerkProvider appearance

--- a/Product Page/src/index.css
+++ b/Product Page/src/index.css
@@ -86,3 +86,13 @@
 .-rotate-360 {
   @apply rotate-[-360deg]
 }
+
+.cl-internal-1hp5nqm{
+  display: none;
+}
+.cl-internal-1dauvpw{
+  display: none;
+}
+.cl-internal-14tc293{
+  color: white;
+}
