--- a/client/style.css
+++ b/client/style.css
@@ -400,3 +400,10 @@ input:checked + .toggle-slider:before {
 .memory-item {
   margin-bottom: 0.5rem;
 }
+
+#trafficChart {
+  display: block;
+  box-sizing: border-box;
+  height: 100%;
+  width: 100%;
+}
